committing nav changes

--- a/src/main/resources/com/example/byebyeboxeyes/landing-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/landing-view.fxml
@@ -1,16 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.byebyeboxeyes.controller.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<StackPane fx:id="mainStackPane" style="-fx-border-color: black; -fx-border-width: 1px;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.byebyeboxeyes.controller.LandingController">
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+  <GridPane alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 1px;">
+    <columnConstraints>
+      <ColumnConstraints percentWidth="50" />
+      <ColumnConstraints hgrow="ALWAYS" />
+    </columnConstraints>
+    <!-- Right half -->
+    <StackPane GridPane.columnIndex="1">
+      <children>
+        <GridPane alignment="CENTER" hgap="5.0" vgap="10.0">
+          <columnConstraints>
+            <ColumnConstraints minWidth="60.0" />
+            <ColumnConstraints />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+          </rowConstraints>
+          <children>
+            <!-- <a href="https://www.freepik.com/icon/scan_4294259#fromView=search&page=2&position=5&uuid=31e879a4-f0cc-4780-a471-d90d01c625de">Icon by Freepik</a> -->
+            <ImageView fitHeight="125.0" fitWidth="125.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+              <image>
+                <Image url="@images/Logo.png" />
+              </image>
+            </ImageView>
+          </children>
+        </GridPane>
+      </children>
+    </StackPane>
+    <!-- Left Half -->
+    <VBox alignment="CENTER" spacing="20.0">
+      <Label text="Enter your details below to sign in" />
+      <GridPane alignment="CENTER" hgap="5.0" vgap="10.0">
+        <columnConstraints>
+          <ColumnConstraints minWidth="60.0" />
+          <ColumnConstraints />
+        </columnConstraints>
+        <Label text="Username:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0" />
+        <Label text="Password:" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+        <TextField fx:id="userNameTextField" maxWidth="200" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="passwordTextField" maxWidth="200" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Button fx:id="loginButton" alignment="CENTER" contentDisplay="CENTER" onAction="#onLoginButtonClick" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Hyperlink fx:id="hyperlink" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="166.0" onAction="#onHyperlinkClick" text="Don't have an account?" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <rowConstraints>
+          <RowConstraints />
+          <RowConstraints />
+          <RowConstraints />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" />
+        </rowConstraints>
+      </GridPane>
+    </VBox>
+    <rowConstraints>
+      <RowConstraints />
+    </rowConstraints>
+  </GridPane>
+</StackPane>
