--- a/src/main/resources/com/example/byebyeboxeyes/goals-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/goals-view.fxml
@@ -8,7 +8,14 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+            fx:controller="com.example.byebyeboxeyes.controller.GoalsController"
+            prefHeight="400.0" prefWidth="600.0">
+    <VBox>
+        <Label text="GOALSVIEW"/>
+        <Label text="GOALSVIEW"/>
+        <Label text="GOALSVIEW"/>
+        <Label text="GOALSVIEW"/>
+        <Label text="GOALSVIEW"/>
+    </VBox>
 
 </AnchorPane>
