--- a/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<BorderPane fx:id="mainBorderPane" prefHeight="400.0" prefWidth="591.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.byebyeboxeyes.controller.HomeController">
+    <left>
+        <VBox prefHeight="400.0" prefWidth="93.0">
+            <VBox>
+                <children>
+                    <Button fx:id="settingsNavButton" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Settings">
+                        <VBox.margin>
+                            <Insets />
+                        </VBox.margin></Button>
+                    <Button fx:id="statisticsNavButton" alignment="CENTER" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Statistics">
+                        <VBox.margin>
+                            <Insets />
+                        </VBox.margin></Button>
+                    <Button fx:id="goalsNavButton" contentDisplay="CENTER" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Goals">
+                        <VBox.margin>
+                            <Insets />
+                        </VBox.margin></Button>
+                </children>
+                <VBox.margin>
+                    <Insets top="50.0" />
+                </VBox.margin>
+            </VBox>
+        </VBox>
+    </left>
+    <center>
+        <fx:include source="timer-view.fxml" />
+    </center>
+</BorderPane>
