--- a/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane fx:id="mainBorderPane" prefHeight="400.0" prefWidth="591.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.byebyeboxeyes.controller.HomeController">
@@ -9,15 +10,15 @@
         <VBox prefHeight="400.0" prefWidth="93.0">
             <VBox>
                 <children>
-                    <Button fx:id="settingsNavButton" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Settings">
+                    <Button fx:id="timersNavButton" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Timers">
                         <VBox.margin>
                             <Insets />
                         </VBox.margin></Button>
-                    <Button fx:id="statisticsNavButton" alignment="CENTER" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Statistics">
+                    <Button fx:id="statisticsNavButton" alignment="CENTER" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Statistics">
                         <VBox.margin>
                             <Insets />
                         </VBox.margin></Button>
-                    <Button fx:id="goalsNavButton" contentDisplay="CENTER" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Goals">
+                    <Button fx:id="goalsNavButton" contentDisplay="CENTER" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="50.0" prefWidth="116.0" text="Goals">
                         <VBox.margin>
                             <Insets />
                         </VBox.margin></Button>
@@ -26,9 +27,20 @@
                     <Insets top="50.0" />
                 </VBox.margin>
             </VBox>
+         <VBox prefHeight="200.0" prefWidth="100.0" />
         </VBox>
     </left>
     <center>
         <fx:include source="timer-view.fxml" />
     </center>
+   <right>
+      <ImageView fx:id="settingsNavButton" fitHeight="24.0" fitWidth="23.0" onMouseClicked="#onImageClick" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="TOP_RIGHT">
+         <image>
+            <Image url="@images/settings-icon.png" />
+         </image>
+         <BorderPane.margin>
+            <Insets right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </ImageView>
+   </right>
 </BorderPane>
