--- a/src/main/resources/com/example/byebyeboxeyes/timer-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/timer-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import com.example.byebyeboxeyes.timer.TimerListCell?>
 <StackPane fx:id="timersStackPane" style="-fx-border-color: black; -fx-border-width: 1px;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.byebyeboxeyes.controller.TimersPageController">
 
     <GridPane alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 1px;">
@@ -25,7 +26,7 @@
             </HBox>
 
             <Label text="Recent Timers" style="-fx-font-weight: bold;" />
-            <ListView fx:id="recentTimersList" />
+            <FlowPane fx:id="recentTimersFlowPane" hgap="10" vgap="10" />
         </VBox>
     </GridPane>
 </StackPane>
