--- a/src/main/resources/com/example/byebyeboxeyes/settings-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/settings-view.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.byebyeboxeyes.controller.SettingsController"
-            prefHeight="400.0" prefWidth="600.0">
-    <VBox>
-        <Label text="Settings View"/>
-        <Label text="Settings View"/>
-        <Label text="Settings View"/>
-        <Label text="Settings View"/>
-    </VBox>
+<AnchorPane prefHeight="650.0" prefWidth="883.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.byebyeboxeyes.controller.SettingsController">
+    <VBox alignment="CENTER" />
+   <Button layoutX="392.0" layoutY="292.0" mnemonicParsing="false" text="Reset Password" />
+   <Button layoutX="392.0" layoutY="334.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Logout" onAction="#onLogoutButtonClick"/>
 </AnchorPane>
