--- a/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
@@ -7,18 +7,18 @@
 
 <BorderPane fx:id="mainBorderPane" prefHeight="400.0" prefWidth="591.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.byebyeboxeyes.controller.HomeController">
     <left>
-        <VBox prefHeight="400.0" prefWidth="117.0">
-            <VBox>
+        <VBox prefHeight="400.0" prefWidth="140.0">
+            <VBox alignment="CENTER">
                 <children>
-                    <Button fx:id="timersNavButton" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="75.0" prefWidth="116.0" text="Timers">
+                    <Button fx:id="timersNavButton" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="65.0" prefWidth="116.0" text="Timers">
                         <VBox.margin>
                             <Insets />
                         </VBox.margin></Button>
-                    <Button fx:id="statisticsNavButton" alignment="CENTER" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="75.0" prefWidth="116.0" text="Statistics">
+                    <Button fx:id="statisticsNavButton" alignment="CENTER" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="65.0" prefWidth="116.0" text="Statistics">
                         <VBox.margin>
                             <Insets />
                         </VBox.margin></Button>
-                    <Button fx:id="goalsNavButton" contentDisplay="CENTER" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="75.0" prefWidth="116.0" text="Goals">
+                    <Button fx:id="goalsNavButton" contentDisplay="CENTER" focusTraversable="false" onAction="#onNavButtonClick" prefHeight="65.0" prefWidth="116.0" text="Goals">
                         <VBox.margin>
                             <Insets />
                         </VBox.margin></Button>
@@ -26,11 +26,12 @@
                 <VBox.margin>
                     <Insets top="50.0" />
                 </VBox.margin>
+                <VBox prefHeight="116.0" alignment="CENTER"/>
+                    <Button onAction="#eyeTipButton" prefHeight="40.0" prefWidth="116.0" text="See Tips!"/>
+                    <TextArea fx:id="eyeTipTxtArea" wrapText="true" editable="false" minHeight="190.0" > How can you improve your eye health? </TextArea>
+                </VBox>
             </VBox>
-         <VBox prefHeight="400.0"/>
-            <Label fx:id="eyeHealthHeading" alignment="CENTER" prefHeight="20.0" prefWidth="116.0" text="Eye Health:"/>
-            <TextArea fx:id="tipOftheDay" wrapText="true" editable="false"/>
-        </VBox>
+
     </left>
     <center>
         <fx:include source="timer-view.fxml" />
