--- a/src/main/resources/com/example/byebyeboxeyes/settings-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/settings-view.fxml
@@ -5,6 +5,6 @@
 
 <AnchorPane prefHeight="650.0" prefWidth="883.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.byebyeboxeyes.controller.SettingsController">
     <VBox alignment="CENTER" />
-   <Button layoutX="392.0" layoutY="292.0" mnemonicParsing="false" text="Reset Password" />
+   <Button layoutX="392.0" layoutY="292.0" mnemonicParsing="false" text="Reset Password" onAction="#onResetButtonClick" />
    <Button layoutX="392.0" layoutY="334.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="99.0" text="Logout" onAction="#onLogoutButtonClick"/>
 </AnchorPane>
