--- a/src/main/resources/com/example/byebyeboxeyes/landing-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/landing-view.fxml
@@ -8,7 +8,7 @@
 
   <VBox alignment="TOP_CENTER">
     <!--TODO: EDIT in CSS fx:id just for reference-->
-    <Label fx:id="Title">Bye Bye Box Eyes</Label>
+    <Label fx:id="Title" style="-fx-font-size: 40px; -fx-font-weight: bold; -fx-padding: 35px;">Bye Bye Box Eyes</Label>
   </VBox>
 
   <GridPane alignment="CENTER" prefHeight="311.0" prefWidth="483.0" style="-fx-border-color: black; -fx-border-width: 1px;">
