--- a/src/main/resources/com/example/byebyeboxeyes/signup-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/signup-view.fxml
@@ -10,7 +10,7 @@
 
     <VBox alignment="TOP_CENTER">
         <!--TODO: EDIT in CSS fx:id just for reference-->
-        <Label fx:id="Title" >Bye Bye Box Eyes</Label>
+        <Label fx:id="Title" style="-fx-font-size: 40px; -fx-font-weight: bold; -fx-padding: 35px; ">Bye Bye Box Eyes</Label>
     </VBox>
 
     <GridPane alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 1px;">
