Added Current User to Settings

--- a/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
+++ b/src/main/resources/com/example/byebyeboxeyes/home-view.fxml
@@ -29,7 +29,7 @@
                             <Image url="@images/settings-icon.png" />
                         </image>
                     </ImageView>
-                    <Label fx:id="userSignedIn" text="HERE" wrapText="true" minWidth="100.0" style=" -fx-padding: 0 0 0 5px; -fx-font-size: 14px;">
+                    <Label fx:id="userSignedIn" wrapText="true" minWidth="100.0" style=" -fx-padding: 0 0 0 5px; -fx-font-size: 14px;">
                     </Label>
                 </HBox>
             </VBox>
